# docker-top

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: app.rs  config.rs  docker.rs  event.rs  main.rs  model.rs
src/ui/: chart.rs  footer.rs  header.rs  mod.rs  table.rs  theme.rs
