[package]
name = "docker-top"
version = "0.1.0"
edition = "2021"
description = "A TUI for monitoring Docker Compose projects"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
bollard = "0.20"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
bytesize = "1.3"
chrono = { version = "0.4", default-features = false, features = ["now"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
